<?xml version="1.0" encoding="utf-8"?>





    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"



        android:icon="@drawable/ic_action_name"

        >
    <!-- "file" submenu -->



            <item android:id="@+id/item1"
                android:title="@string/menuItem1" />
            <item android:id="@+id/item2"
                android:title="@string/menuItem2"/>
            <item android:id="@+id/item3"
                 android:title="@string/menuItem3"/>
    <item android:id="@+id/item4"
        android:title="@string/menuItem4"/>
<!--
        <item
            android:id="@+id/spinner"

            android:icon="@drawable/ic_action_name"
            app:actionViewClass="android.widget.Spinner"
            app:showAsAction="always"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:logo="@drawable/ic_action_name"

            />
    -->


    </menu>

