<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_componant_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:screenOrientation="portrait"

    tools:context="com.example.surface.rcmage.Activities.newComponantSet">
    <!-- bottom drawable of a CheckedTextView -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:text="@string/new1"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1New"
            android:onClick="btn_click"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:minWidth="80dp"
            android:layout_alignParentTop="true"
            android:maxWidth="85dp"
            android:layout_weight="1" />

        <Button
            android:text="@string/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2Load"
            android:onClick="btn_click"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="10dp"
            android:minWidth="80dp"
            android:maxWidth="85dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button1New"
            android:layout_weight="1" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3Save"
            android:onClick="btn_click"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="10dp"
            android:minWidth="80dp"
            android:maxWidth="85dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button2Load"
            android:layout_weight="1" />

        <Button
            android:text="Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_delete"
            android:onClick="btn_click"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="10dp"
            android:minWidth="80dp"
            android:maxWidth="85dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button3Save"
            android:layout_weight="1" />

    </LinearLayout>



    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:dividerHeight="4dp"
        android:divider="#000000"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
